--- a/Yeek/Yeek.csproj
+++ b/Yeek/Yeek.csproj
@@ -14,16 +14,22 @@
         <EmbeddedResource Include="Database\Migrations\Script0004_Moderation.sql"/>
         <EmbeddedResource Include="Database\Migrations\Script0005_UserLastLogin.sql"/>
         <EmbeddedResource Include="Database\Migrations\Script0006_UserNotesTime.sql"/>
+        <EmbeddedResource Include="Database\Migrations\Script0007_FilePreviews.sql"/>
+        
+        <EmbeddedResource Include="FileHosting\Midi\GeneralUser-GS-Bank0.sf2"/>
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.1.66" />
+      <PackageReference Include="FFMpegCore" Version="5.2.0" />
       <PackageReference Include="JetBrains.Annotations" Version="2025.2.2" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.8" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="9.0.8" />
       <PackageReference Include="NetEscapades.Configuration.Yaml" Version="3.1.0" />
       <PackageReference Include="Npgsql" Version="9.0.3" />
       <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+      <PackageReference Include="SpaceWizards.NFluidsynth" Version="0.2.2" />
+      <PackageReference Include="TickerQ" Version="2.5.3" />
     </ItemGroup>
 
     <ItemGroup>
