--- a/Yeek/Yeek.csproj
+++ b/Yeek/Yeek.csproj
@@ -15,6 +15,7 @@
         <EmbeddedResource Include="Database\Migrations\Script0005_UserLastLogin.sql"/>
         <EmbeddedResource Include="Database\Migrations\Script0006_UserNotesTime.sql"/>
         <EmbeddedResource Include="Database\Migrations\Script0007_FilePreviews.sql"/>
+        <EmbeddedResource Include="Database\Migrations\Script0008_LockedFiles.sql"/>
     </ItemGroup>
 
     <ItemGroup>
