feat: Add download counts

--- a/Yeek/Yeek.csproj
+++ b/Yeek/Yeek.csproj
@@ -17,6 +17,7 @@
         <EmbeddedResource Include="Database\Migrations\Script0007_FilePreviews.sql"/>
         <EmbeddedResource Include="Database\Migrations\Script0008_LockedFiles.sql"/>
         <EmbeddedResource Include="Database\Migrations\Script0009_FilePreviewRegenerations.sql"/>
+        <EmbeddedResource Include="Database\Migrations\Script0010_Downloads.sql"/>
     </ItemGroup>
 
     <ItemGroup>
